//(C) Copyright [2020] Hewlett Packard Enterprise Development LP
//
//Licensed under the Apache License, Version 2.0 (the "License"); you may
//not use this file except in compliance with the License. You may obtain
//a copy of the License at
//
//    http:#www.apache.org/licenses/LICENSE-2.0
//
//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
//WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
//License for the specific language governing permissions and limitations
// under the License

syntax = "proto3";

service Managers {
    rpc GetManagersCollection(ManagerRequest) returns (ManagerResponse) {}
    rpc GetManager(ManagerRequest) returns (ManagerResponse) {}
    rpc GetManagersResource(ManagerRequest) returns (ManagerResponse) {}
}

message ManagerRequest {
    string sessionToken=1;
    string managerID=2;
    string URL=3;
    string resourceID=4;
}

message ManagerResponse {
    int32 statusCode = 1;
    string statusMessage = 2;
    bytes body = 4;
    map<string, string> header = 5;
}
